Refactored the code. Added docstrings.

--- a/alembic.ini
+++ b/alembic.ini
@@ -51,7 +51,7 @@ version_path_separator = os  # default: use os.pathsep
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-sqlalchemy.url = os.environ['SQLALCHEMY_DATABASE_URL']
+sqlalchemy.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@localhost/%(POSTGRES_DB)s
 
 
 [post_write_hooks]
