--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ bcrypt = "*"
 pydantic = {extras = ["email"], version = "*"}
 asyncpg = "*"
 psycopg2-binary = "*"
+redis = "*"
+celery = "*"
+flower = "*"
 
 [dev-packages]
 
