--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,58 @@ version: '3'
 services:
 
   db:
-    image: postgres:12-alpine
+    image: postgres:14-alpine
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - ./db_data:/var/lib/postgresql/data
     env_file:
       - .env
+#    restart: always
+
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    command: bash -c "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
       - "8000:8000"
     env_file:
       - .env
     volumes:
       - .:/app
+#    restart: always
+    depends_on:
+      - db
+
+  redis:
+    container_name: redis
+    image: redis:6.2-alpine
+
+  celery_worker:
+    container_name: celery_worker
+    build: .
+    command: celery -A celery_worker.celery worker --loglevel=info
+    volumes:
+      - .:/app
+    environment:
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+    depends_on:
+      - app
+      - redis
+
+  flower:
+    container_name: flower
+    build: .
+    command: celery -A celery_worker.celery flower --port=5555  --loglevel=info
+    ports:
+      - "5555:5555"
+    environment:
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+    depends_on:
+      - app
+      - redis
+      - celery_worker
+
